# lumi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.base.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  desktop-release.yml
adapters/: README.md
adapters/codex/: lumi-codex-hook.sh
adapters/copilot/: hooks.json  lumi-copilot-hook.sh
adapters/cursor/: hooks.json  lumi-cursor-hook.sh
adapters/gemini/: hooks.json  lumi-gemini-hook.sh
adapters/generic/: lumi-pipe.sh
adapters/terminal/: README.md  lumi-terminal.bash  lumi-terminal.ps1
billing/: .env.example  package.json  sign.mjs  stripe-webhook.js
claude-plugin/: GEMINI.md  README.md  gemini-extension.json
claude-plugin/.claude-plugin/: marketplace.json  plugin.json
claude-plugin/.codex-plugin/: plugin.json
core/: .gitignore  README.md  package.json
core/scripts/: sign-license.mjs  (+1 more)
desktop-overlay/: BUILD.md  README.md  package-lock.json  package.json
desktop-overlay/src-tauri/: Cargo.toml  tauri.conf.json
desktop-overlay/src-tauri/capabilities/: default.json
desktop-overlay/src-tauri/icons/: README.md
desktop-overlay/src-tauri/src/: lib.rs  main.rs
docs/: INSTALL.md  WHAT-LUMI-DOES.md  integrations.md
scripts/: publish-lumi-plugin.sh
vscode-extension/: .vscodeignore  LICENSE  README.md  esbuild.js  package.json  tsconfig.json
web-landing/: index.html  main.js  styles.css  tokens.css
(+202 files in other folders)
