[package]
name = "lumi-overlay"
version = "0.1.0"
edition = "2021"

[lib]
name = "lumi_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lumi-overlay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
